# data-engineering-practice

./: .gitignore  README.md  docker-compose.yaml  download_and_organize_backblaze_data.py  pyproject.toml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: example.py  hard_drive_data_transform.py  process_hard_drive_data_dag.py
app/backend/: app.py  pyproject.toml
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.css  App.js
