[tool.poetry]
name = "data-engineering-practice"
version = "0.1.0"
description = ""
authors = ["xiaobin <xiaobin.zheng@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
apache-airflow = "^2.9.2"
requests = "^2.32.3"
pandas = "^2.2.2"
zipfile36 = "^0.1.3"
tqdm = "^4.66.4"
pyspark = "^3.5.1"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

